# hello_rust

./: .gitignore  README.md
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
fibo_seq/: Cargo.toml
fibo_seq/src/: main.rs
generic_trait_life/: Cargo.toml
generic_trait_life/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
my_box/: Cargo.toml
my_box/src/: main.rs
my_channel/: Cargo.toml
my_channel/src/: main.rs
my_closures/: Cargo.toml
my_closures/src/: main.rs
my_crate/: Cargo.toml
my_crate/src/: main.rs
my_enum/: Cargo.toml
my_enum/src/: main.rs
my_error/: Cargo.toml
my_error/src/: main.rs
my_func/: Cargo.toml
my_func/src/: main.rs
my_iter/: Cargo.toml
my_iter/src/: main.rs
my_letif/: Cargo.toml
my_letif/src/: main.rs
my_lifetime/: Cargo.toml
my_lifetime/src/: main.rs
my_map/: Cargo.toml
my_map/src/: main.rs
my_match/: Cargo.toml
my_match/src/: main.rs
my_oop/: Cargo.toml
my_oop/src/: lib.rs  main.rs
my_ownership/: Cargo.toml
my_ownership/src/: borrowing.rs  main.rs  slice.rs
my_patterns/: Cargo.toml
my_patterns/src/: main.rs
my_refs/: Cargo.toml
my_refs/src/: main.rs
my_server/: 404.html  Cargo.toml  hello.html
my_server/src/: lib.rs
my_slice/: Cargo.toml
my_slice/src/: main.rs
my_sound/: Cargo.toml
my_string/: Cargo.toml
my_struct/: Cargo.toml
my_struct_exa/: Cargo.toml
my_test/: Cargo.toml
my_thread/: Cargo.toml
my_trait/: Cargo.toml
my_vector/: Cargo.toml
restaurant/: Cargo.toml
variables/: Cargo.toml
(+11 files in other folders)
