[package]
name = "adder"
version = "0.1.0"
authors = ["zongzhang <jingchang_007@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This field points at where the crate is located, relative to the `Cargo.toml`.


[dependencies]
